--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<ul class="nav nav-pills pull-right">
 					<li role="presentation" class="active"><a href="#">Home</a></li>
 					<li role="presentation"><a href="#">Products</a></li>
-					<li role="presentation"><a href="#">Contact Us</a></li>
+					<li role="presentation"><a href="contact.html">Contact Us</a></li>
 				</ul>
 		</div><!-- End Header -->
 		<div class="jumbotron">
