--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<h1>FEATURED</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum modi commodi, esse eaque minus incidunt quis pariatur dolor voluptate, dicta atque tenetur totam accusantium fuga dolores. Distinctio hic tempore, provident.</p>
+							<p>Ryeker is awesome!!! ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum modi commodi, esse eaque minus incidunt quis pariatur dolor voluptate, dicta atque tenetur totam accusantium fuga dolores. Distinctio hic tempore, provident.</p>
 						</div>
 					</div><!-- /.row -->
 					<div class="row">
