--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<h1>FEATURED</h1>
-							<p>Ryeker is stupid!!! ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum modi commodi, esse eaque minus incidunt quis pariatur dolor voluptate, dicta atque tenetur totam accusantium fuga dolores. Distinctio hic tempore, provident.</p>
+							<p>Ryeker is awesome!!! ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum modi commodi, esse eaque minus incidunt quis pariatur dolor voluptate, dicta atque tenetur totam accusantium fuga dolores. Distinctio hic tempore, provident.</p>
 						</div>
 					</div><!-- /.row -->
 					<div class="row">
@@ -44,7 +44,7 @@
 					      <div class="caption">
 					        <h3>Dog Bowl</h3>
 					        <p>The best bowl for your dog.</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					        <p class="button"><a href="#" class="btn btn-primary" role="button">Purchase Now</a>
 					      </div>
 					    </div>
 						</div><!-- end item -->
@@ -54,7 +54,7 @@
  					      <div class="caption">
  					        <h3>Cat Toy</h3>
  					        <p>The best toy for your cat.</p>
- 					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+ 					        <p class="button"><a href="#" class="btn btn-primary" role="button">Purchase Now</a>
  					      </div>
  					    </div>
  						</div><!-- end item -->
@@ -64,7 +64,7 @@
  					      <div class="caption">
  					        <h3>Parrot Stuff</h3>
  					        <p>The best stuff for your parrot.</p>
- 					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+ 					        <p class="button"><a href="#" class="btn btn-primary" role="button">Purchase Now</a>
  					      </div>
  					    </div>
  						</div><!-- end item -->
@@ -86,20 +86,21 @@
 			<div class="col-sm-4">
 			  <img class="logo center-block" src="img/petstore_logo.png" alt="pet store logo">
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 div1">
 				<address>
 					<a href="#">Pet Store<br>
 					Fresno, Ca<br>
 					info@petstore.come</a>
 				</address>
 			</div>
-			<div class="col-sm-4">
-					<a href="twitter.com"><i class="fa fa-twitter" aria-hidden="true">Twitter</i></a><br>
-					<a href="facebook.com"><i class="fa fa-facebook" aria-hidden="true">Facebook</i></a><br>
-					<a href="linkedin.com"><i class="fa fa-linkedin" aria-hidden="true">Linkedin</i></a>
+			<div class="col-sm-4 div1">
+					<a href="twitter.com"><i class="fa fa-twitter" aria-hidden="true"><span style="margin-left: 3px">Twitter</span></i></a><br>
+					<a href="facebook.com"><i class="fa fa-facebook" aria-hidden="true"><span style="margin-left: 8px">Facebook</span></i></a><br>
+					<a href="linkedin.com"><i class="fa fa-linkedin" aria-hidden="true"><span style="margin-left: 4px">Linkedin</true></i></a>
 			</div>
-			<div class="text-center">&copy; 2016 Pet Store, Inc. All Rights Reserved.</div>
 		</div>
+			<div class="copyright">&copy; 2016 Pet Store, Inc. All Rights Reserved.
+			</div>
 	</div><!-- end Container-fluid -->
 
 
